tests/miniJava/neg/006206_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { void ( 0 ) { } } }
